TokenExchange Change Log
========================

Version 4.1.0
  - Move block store to database table

Version 4.0.0
  - Initial release
